Add js create Card And insert Cards into DOM

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,7 +10,14 @@
     <title>Tier Quartett</title>
 </head>
 <body>
+    <header>
 
+    </header>
+    <main class="container">
+        <div id="animals" class="row">
+
+        </div>
+    </main>
 
 </body>
 <script src="./index.js"></script>
