--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,6 +14,15 @@
 
     </header>
     <main class="container">
+        <div class="row">
+            <div class="col">
+                <input type="text" id="name">
+                <input type="number" id="age">
+                <input type="text" id="gender">
+                <input type="checkbox" id="cute">
+                <button id="addAnimal">Add Animal</button>
+            </div>
+        </div>
         <div id="animals" class="row">
 
         </div>
